--- a/style-responsive.css
+++ b/style-responsive.css
@@ -54,6 +54,7 @@
         font-size: 17px;
         line-height: 23px;
     }
+
     .pic-about-us span img {
         right: 19vw;
         bottom: 3.5vw;
@@ -115,14 +116,14 @@
     }
 
     .text-see-all {
-        font-size: 10px;
+        font-size: 11px;
         line-height: 9px;
-        padding: 6.5px 28px;
+        padding: 6px 28px;
     }
 
     .text-see-all img {
         padding: 1px;
-        right: -24%;
+        right: -20%;
     }
 
     .btn-slip-down img {
@@ -140,6 +141,7 @@
     .about-us {
         padding: 50px 0;
     }
+
     .pic-about-us {
         width: 45%;
     }
@@ -147,6 +149,7 @@
     .about-us-desciption p {
         font-size: 12px;
     }
+
     .about-us-desciption h2 p {
         font-size: 28px;
         padding: 0 0 10px;
@@ -160,6 +163,7 @@
         margin-bottom: 100px;
         padding-left: 50px;
     }
+
     .pic-about-us span {
         padding: 1vw 0.5vw 0 1.5vw;
         font-size: 12px;
@@ -168,6 +172,7 @@
         right: 3vw;
         bottom: 6vw;
     }
+
     .pic-about-us span img {
         width: 4.5vw;
         right: 12vw;
@@ -175,120 +180,150 @@
         padding: 0;
         margin: 0;
     }
+
     .btn-see-more-2 {
         position: absolute;
         top: auto;
         bottom: 0;
         left: 70px;
     }
+
     /* Services */
     .services-1 {
         width: 95%;
     }
+
     /* News */
     .news {
         margin: 70px 0;
     }
+
     .news-contents h3 {
         margin-bottom: 10px;
         font-size: 18px;
         line-height: 25px;
     }
+
     .news-contents p {
         font-size: 12px;
         line-height: 15px;
     }
+
     .date-news {
         padding: 15px 0 20px 10px;
     }
+
     .btn-see-more-3 {
         padding-left: 60px;
-        transform: translateY(15px);
+        transform: translateY(10px);
     }
+
     /* Customers */
     .main-title h2 span {
         font-size: 12px;
     }
+
     .bg-customer {
         margin-left: 100px;
         width: 30%;
     }
+
     .bg-customer span {
         bottom: 2vw;
     }
+
     .customers-comment {
         padding: 28px 0 110px 0;
         margin: 0px;
     }
+
     .customer-comment p {
         padding-top: 15px;
         padding-left: 100px;
     }
+
     /* Contact */
     .footer-contact {
         padding: 50px 0;
     }
+
     .footer-contact-item-1 h2 {
         font-size: 30px;
     }
+
     .footer-contact-item-2 {
         padding-right: 30px;
     }
+
     .footer-contact-item-2 img {
         width: 25%;
     }
+
     .footer-contact-item-2 p {
         font-size: 11px;
         line-height: 12px;
     }
+
     /* Footer */
     .main-footer {
         padding-bottom: 62px;
     }
+
     .col-footer-1 {
         width: calc(100%/3);
         margin-left: 0;
     }
+
     .col-footer-2 {
         width: calc(100%/3);
         margin-left: 0;
     }
+
     .col-footer-3 {
         width: calc(100%/3);
         margin-left: 0;
     }
+
     .col-footer-3 a img {
         padding: 5.5px;
         right: 13%;
     }
+
     .main-footer h5 {
         margin-top: 30px;
         font-weight: 600;
         font-size: 14px;
     }
+
     .main-footer p {
         margin-top: 10px;
         font-size: 12px;
     }
+
     .main-footer h4 {
         font-size: 16px;
         line-height: 20px;
     }
+
     .col-footer-2 ul li a {
         font-weight: 400;
         font-size: 12px;
     }
+
     .submit-area {
         margin: 4px 0 10px;
     }
+
     .submit-area input {
         width: 235px;
         height: 35px;
     }
+
     .maps iframe {
         width: 255px;
         height: 120px;
     }
+
     /* Links */
     .footer-links {
         padding: 42px 0 32px;
@@ -406,14 +441,14 @@
     }
 
     .text-see-all {
-        font-size: 9px;
-        padding: 5px 30px;
+        font-size: 12px;
+        padding: 8px 45px;
     }
 
     .text-see-all img {
         padding: 5px;
-        width: 20.5%;
-        right: -20%;
+        width: 21%;
+        right: -15%;
     }
 
     .icon-banner ul li {
@@ -455,6 +490,7 @@
         right: 27%;
         bottom: 7vw;
     }
+
     .pic-about-us span img {
         width: 9vw;
         position: absolute;
@@ -491,7 +527,7 @@
 
     .btn-see-more-2 {
         bottom: 30px;
-        left: 40%;
+        left: 35%;
     }
 
 
@@ -535,15 +571,19 @@
 
 
     /* Customer */
-    .slick-prev::before, .slick-next::before {
+    .slick-prev::before,
+    .slick-next::before {
         font-size: 30px;
     }
+
     .slick-prev {
         left: -10px;
     }
+
     .slick-next {
         right: 10px;
     }
+
     .main-title h2 span {
         font-size: 12px;
     }
@@ -594,11 +634,13 @@
         padding: 0 0 47px;
     }
 
-    .slick-prev, .slick-next {
+    .slick-prev,
+    .slick-next {
         top: 40%;
         width: 30px;
         height: 30px;
     }
+
     /* Contact */
     .footer-contact {
         padding: 40px 0;
@@ -688,35 +730,49 @@
         width: 15px;
         height: 15px;
     }
+    .contact-icon:hover {
+        border-radius: unset;
+        padding: 0 35px;
+        box-shadow: unset;
+        transition: 0;
+    
+    }
 }
+
 /* Max Width : 768px */
 @media (max-width:768px) {
     .bg-customer span {
-        left: 18vw;
+        left: 20vw;
     }
+
 }
+
 /* Max Width : 767px */
 @media (max-width:767px) {
+
     /* Header */
     .icon-logo img {
         width: 20%;
         margin-left: 0;
     }
+
     .contact-icon img {
         width: 70%;
     }
+
     .contact-name p {
         font-size: 8px;
         line-height: 14px;
     }
+
     .contact-name span {
         font-size: 8px;
         line-height: 15px;
     }
-    /* Banner */
-    .banner {
 
-    }
+    /* Banner */
+    .banner {}
+
     .title-banner {
         width: 100%;
         top: 0;
@@ -724,11 +780,13 @@
         left: 0;
         padding: 10vw;
     }
+
     .title-banner h1 {
         font-size: 23px;
         line-height: 5vw;
         width: 100%;
     }
+
     .title-banner p {
         font-size: 10px;
         font-weight: normal;
@@ -737,30 +795,38 @@
         margin-bottom: 3vw;
         width: 90%;
     }
+
     .icon-banner {
         display: none;
     }
+
     /* About Us */
     .pic-about-us span {
         bottom: 11vw;
     }
+
     .pic-about-us span {
         font-size: 15px;
     }
+
     /* Services */
     .services {
         padding: 70px;
     }
+
     .service {
         padding-left: 5vw;
     }
+
     .icon-service {
         padding-top: 20px;
         margin-bottom: 8px;
     }
+
     .detail-service p:last-child {
         padding-bottom: 20px;
     }
+
     .icon-service img:first-child {
         max-width: 50%;
     }
@@ -768,174 +834,221 @@
     .icon-service img:last-child {
         display: none;
     }
+
     /* Customer */
     .slick-prev {
         display: none;
     }
+
     .slick-next {
         display: none;
     }
+
     .slick-prev::before {
         display: none;
     }
+
     .slick-next::before {
         display: none;
     }
+
     .bg-customer img {
         padding: 0 10vw;
     }
+
     .bg-customer span {
         left: 20vw;
         bottom: -5vw;
     }
+
     .customer-comment {
         position: relative;
         width: 90%;
         margin-top: 50px;
         padding: 0;
     }
+
     .brands {
         display: none;
     }
+
     .slick-track img:last-child {
         padding: 3vw;
     }
+
     .brands-mobile {
         display: flex;
         margin: 0;
         overflow: hidden;
     }
+
     /* Contact */
     .footer-contact-item-1 {
         width: 15%;
     }
+
     .footer-contact-item-1 h2 {
         padding-top: 30px;
         font-size: 20px;
     }
+
     .footer-contact-item-2 {
         padding-right: 0;
     }
+
     .footer-contact-item-2 img {
         width: 20%;
     }
+
     /* Footer */
     .col-footer-2 ul li {
         padding-right: 30px;
     }
 }
+
 /* Max Width : 576px */
 @media (max-width:576px) {
+
     /* Header */
     .top-header {
         padding: 20px 0 20px;
     }
+
     .contact-icon {
         padding: 0px 20px;
     }
+
     /* Banner */
     .title-banner h1 {
         font-size: 20px;
     }
+
     .title-banner p {
         font-size: 9px;
     }
+
     .text-see-all img {
-        right: -19%;
-        width: 20%;
+        right: -18%;
+        width: 22.5%;
     }
+
     /* About Us */
     .about-us-desciption {
         padding-left: 12px;
     }
+
     .pic-about-us span {
         font-size: 10px;
         bottom: 17vw;
     }
+
     /* Services */
     .services {
         padding: 50px;
     }
+
     /* News */
     .col-news {
         padding: 5px;
         text-align: center;
     }
+
     .news-contents {
         padding-left: 0;
     }
+
     /* Customers */
     .customer {
         padding: 0 5vw;
     }
+
     .bg-customer {
         padding: 0;
     }
+
     .bg-customer img {
         max-width: 100%;
         padding: 0 80px;
     }
+
     .bg-customer span {
         left: 22vw;
         padding: 4vw;
     }
+
     .customers-comment {
         padding: 38px 0 76px;
     }
+
     .customer-comment {
         width: 100%;
         margin-top: 50px;
     }
+
     .customer-comment p {
         padding-left: 80px;
     }
+
     .customer-comment img {
         padding: 0;
         left: 0;
     }
+
     /* Contact */
     .row-footer-contact {
         display: block;
     }
+
     .footer-contact-item-1 {
         width: 100%;
         margin-bottom: 15px;
     }
+
     .footer-contact-item-1 h2 {
         padding-top: 0;
     }
+
     .footer-contact-item-2 {
         padding: 0;
         width: 100%;
     }
+
     .footer-contact-item-2 img {
         width: 5%;
     }
 }
+
 /* Max Width : 539px */
 @media (max-width:539px) {
+
     /* Customers */
     .bg-customer span {
         left: 23vw;
         padding: 1vw;
     }
+
     .customer-comment p {
         padding-left: 60px;
     }
+
     .customer-comment img {
         left: 0;
     }
+
     .slick-track img:last-child {
         padding: 3vw;
     }
+
     /* Footer */
     .maps iframe {
         width: 270px;
         height: 135px;
     }
 }
+
 /* Max Width : 439px */
 @media (max-width:439px) {
+
     /* Header */
     .menu-hamburger span {
         transition: 0.3s;
@@ -945,28 +1058,37 @@
         height: 2px;
         background-color: black;
     }
+
     /* Banner */
     .title-banner {
         padding: 6vw;
     }
+
     .title-banner p {
         font-size: 6px;
         margin-top: 1vw;
         margin-bottom: 0vw;
     }
-    .text-see-all {
-        font-size: 6px;
-        padding: 3px 20px;
+    .btn-see-more-1 {
+        margin-top: 3vw;
     }
+
+    .text-see-all {
+        font-size: 10px;
+        padding: 5px 25px;
+    }
+
     .btn-slip-down img {
         width: 25px;
         bottom: 3px;
     }
+
     .btn-slip-down a img {
         bottom: 4px;
         width: 7px;
         transform: translate(130%, -50%);
     }
+
     /* About Us */
     .pic-about-us span {
         bottom: 15vw;
@@ -974,32 +1096,39 @@
         padding: 2vw 0 0 4vw;
         line-height: 16px;
     }
+
     .pic-about-us img {
         max-width: 90%;
         margin-bottom: 70px;
         padding-left: 0%;
     }
+
     /* Services */
     .icon-service img:first-child {
         max-width: 40%;
     }
+
     .detail-service p {
         font-size: 12px;
         line-height: 19px;
         margin-bottom: 5px;
         padding: 0;
     }
+
     .detail-service p span {
         font-size: 16px;
         line-height: 15px;
     }
+
     .detail-service p:last-child {
         padding-bottom: 5px;
     }
+
     /* Customers */
     .slick-track img {
         padding: 0 6vw;
     }
+
     .customer-comment p {
         font-family: Open Sans;
         font-style: normal;
@@ -1008,194 +1137,243 @@
         line-height: 22px;
         color: #505050;
     }
+
     .customer-comment img {
         padding: 0;
         width: 10%;
     }
+
     /* Footer */
     .col-footer-2 ul {
         display: block;
         margin-left: 10px;
     }
+
     .col-footer-2 ul li {
         padding-right: 25px;
     }
+
     .col-footer-2 ul li a {
         font-size: 12px;
     }
 }
+
 /* Max Width : 417px */
 @media (max-width:417px) {
     .contact-icon {
         padding: 0px 15px 0 5px;
     }
 }
+
 /* Max Width : 372px */
 @media (max-width:372px) {
+
     /* Header */
     .top-header {
         padding: 10px 0 20px;
     }
+
     .menu-contact {
         padding: 10px 5px 0 0;
     }
+
     .contact-icon {
         padding: 0 5px;
     }
+
     .contact-icon img {
         width: 50%;
     }
+
     .contact-name p {
         font-size: 7px;
         line-height: 5px;
     }
+
     .contact-name span {
         font-size: 6px;
         line-height: 5px;
     }
+
     .menu-banner-mobile li a {
         font-size: 10px;
         line-height: 14px;
     }
+
     .menu-hamburger span {
         width: 10px;
         height: 1px;
     }
+
     /* Banner */
     .title-banner h1 {
         font-size: 14px;
         line-height: 16px;
     }
+
     .title-banner p {
         font-size: 5px;
         line-height: 3vw;
         margin-top: 2vw;
         margin-bottom: 1vw;
     }
+
     .btn-see-more-2 {
         bottom: 0;
-        left: 40%;
+        left: 35%;
     }
+
     .text-see-all {
-        font-size: 5px;
-        padding: 4px 20px;
+        font-size: 6px;
+        padding: 5px 25px;
     }
+
     .text-see-all img {
-            padding: 1px;
-            width: 22%;
-            right: -15%;
+        padding: 1px;
+        width: 23.5%;
+        right: -15%;
     }
+
     /* About Us */
     .about-us {
         padding: 30px 0;
     }
+
     .pic-about-us img {
         max-width: 80%;
         margin-bottom: 60px;
     }
+
     .pic-about-us span {
         bottom: 15vw;
         font-size: 6px;
         padding: 2vw 0 0 6vw;
     }
+
     .about-us-desciption {
         padding-bottom: 60px;
     }
+
     .about-us-desciption h2 span {
         font-size: 10px;
     }
+
     .about-us-desciption h2 p {
         font-size: 21px;
     }
+
     .about-us-desciption p {
         font-size: 10px;
     }
+
     /* Services */
     .icon-service {
         padding-top: 5px;
         margin-bottom: 4px;
     }
+
     .icon-service img:first-child {
         max-width: 30%;
     }
+
     .detail-service p {
         font-size: 9px;
         line-height: 14px;
         margin-bottom: 1px;
     }
+
     .detail-service p span {
         font-size: 12px;
     }
+
     /* News */
     .news {
         margin: 25px 0;
     }
+
     .bg-news {
         margin-bottom: 14px;
     }
+
     .main-title h2 span {
         font-size: 10px;
     }
+
     .main-title h2 p {
         font-size: 28px;
         padding-top: 8px;
     }
+
     .news-contents h3 {
         margin-bottom: 6px;
         font-size: 14px;
         line-height: 20px;
     }
+
     .news-contents p {
         font-size: 9px;
         line-height: 11px;
     }
+
     .date-news {
         padding: 5px 0 15px 5px;
     }
+
     .date-news img {
-            max-width: 15%;
-            padding-left: 4px;
+        max-width: 15%;
+        padding-left: 4px;
     }
+
     .date-news p {
         padding-left: 4px;
         font-size: 10px;
         line-height: 30px;
         color: #303030;
     }
+
     .btn-see-more-3 {
         padding-left: 0px;
         transform: translateY(2px);
     }
+
     .link-3 {
         font-size: 10px;
         line-height: 16px;
     }
+
     .link-4 img {
         width: 20%;
     }
+
     /* Customers */
     .customer-comment p {
         padding-left: 30px;
     }
+
     /* Contact */
     .footer-contact-item-2 p {
         font-size: 8px;
     }
+
     .footer-contact-item-1 h2:hover {
         color: white;
     }
+
     /* Footer */
     .main-footer h5 {
         font-size: 12px;
     }
+
     .main-footer p {
         font-size: 9px;
     }
+
     .submit-area input {
         width: 215px;
     }
+
     .maps iframe {
         width: 250px;
     }
-    
+
 }
