--- a/style.css
+++ b/style.css
@@ -644,6 +644,7 @@ img {
     width: 100%;
     justify-content: center;
     padding: 0 0 47px;
+    transition: .5s;
 }
 
 .brands-mobile {
@@ -861,7 +862,10 @@ img {
 
 .slick-prev:hover,
 .slick-next:hover {
-    zoom: 150%;
+    padding: 5px;
+    width: 40px;
+    height: 40px;
+    transition: .3s;
 }
 
 .text-see-all {
@@ -909,16 +913,28 @@ img {
     transition: 0.5s;
 }
 
+.service {
+    transition: .6s;
+}
+
+.service:hover {
+    background: #265BC5;
+    transition: .6s;
+}
+
 .col-footer-2 ul li a:hover {
     color: lightblue;
     transition: 0.6s;
 }
+
 .footer-contact-item-2 a:hover {
     zoom: 110%;
 }
+
 .icon-link:hover {
     zoom: 150%;
 }
+
 #toTopBtn {
     position: fixed;
     display: inline;
@@ -933,6 +949,7 @@ img {
     text-align: center;
     transition: .6s;
 }
+
 #toTopBtn i {
     position: absolute;
     top: 50%;
@@ -942,7 +959,10 @@ img {
     transform: translate(-50%, -50%);
     font-size: 25px;
 }
+
 #toTopBtn:hover {
     background: red;
+    transition: .6s;
+    padding: 24px;
     transition: .6s;
 }
