--- a/style-responsive.css
+++ b/style-responsive.css
@@ -974,7 +974,6 @@
 
     .bg-customer img {
         max-width: 100%;
-        padding: 0 80px;
     }
 
     .bg-customer span {
@@ -1165,7 +1164,7 @@
     }
 
     /* Customers */
-    .slick-track img {
+    .brands-mobile .slick-list .slick-track img {
         padding: 0 6vw;
         border-top: 1px solid;
         border-bottom: 1px solid;
