--- a/style-responsive.css
+++ b/style-responsive.css
@@ -773,7 +773,7 @@
         line-height: 14px;
     }
 
-    .contact-name span {
+    .contact-name span a {
         font-size: 8px;
         line-height: 15px;
     }
@@ -1252,7 +1252,7 @@
         line-height: 5px;
     }
 
-    .contact-name span {
+    .contact-name span a {
         font-size: 6px;
         line-height: 5px;
     }
