--- a/style.css
+++ b/style.css
@@ -47,10 +47,6 @@ img {
     cursor: pointer;
 }
 
-.contact-icon img:hover {
-    flex-wrap: wrap-reverse;
-}
-
 .contact-name p {
     font-family: Montserrat, sans-serif;
     font-weight: 500;
@@ -118,7 +114,7 @@ img {
     display: inline-block;
     width: 25px;
     height: 20px;
-    right: 0;
+    right: 5px;
     cursor: pointer;
     z-index: 10;
 }
@@ -185,7 +181,7 @@ img {
 .menu-banner {
     display: block;
     position: absolute;
-    top: 50px;
+    top: 35px;
     left: auto;
     border-bottom: 1px solid #999;
     width: 100%;
@@ -240,13 +236,11 @@ img {
 #fa-icon {
     color: #f8f8f8;
 }
+
 .btn-see-more-1 {
     transition: .3s;
 }
-.btn-see-more-1:hover {
-    transform: translateX(10px);
-    transition: 0.3s;
-}
+
 .text-see-all {
     text-decoration: none;
     font-family: Mulish, sans-serif;
@@ -355,17 +349,14 @@ img {
     color: #505050;
 }
 
+.about-us-text {
+    margin-bottom: 10vw;
+}
+
 .btn-see-more-2 {
-    position: absolute;
-    top: auto;
-    bottom: 10px;
-    left: 70px;
     transition: .3s;
 }
-.btn-see-more-2:hover {
-    transform: translateX(10px);
-    transition: .3s;
-}
+
 .btn-see-more-2 a:last-child {
     /* background: #f2f2f2; */
 }
@@ -434,7 +425,7 @@ img {
 .icon-service img:first-child {}
 
 .icon-service img:last-child {
-    padding-left: 15vw;
+    padding-left: 14vw;
 }
 
 .detail-service p:last-child {
@@ -495,7 +486,7 @@ img {
     line-height: 49px;
     text-transform: uppercase;
     color: #303030;
-    padding-top: 14px;
+    padding-top: 18px;
 }
 
 .row-main-news {
@@ -531,10 +522,7 @@ img {
     line-height: 30px;
     color: #333333;
 }
-.news-contents h3:hover {
-    content: "";
 
-}
 .news-contents p {
     font-family: Montserrat, sans-serif;
     font-style: normal;
@@ -582,10 +570,7 @@ img {
     text-align: center;
     transition: .3s;
 }
-.btn-see-more-4:hover {
-    transform: translateX(10px);
-    transition: .3s;
-}
+
 /* Customer */
 .customer {
     background: url(./images/bg-clients.jpg);
@@ -667,25 +652,17 @@ img {
 
 .brands {
     width: 100%;
-    justify-content: center;
     padding: 0 0 47px;
     transition: .5s;
+    text-align: center;
 }
+
 .brands a {
     padding: 0;
 }
+
 .brands a img {
     transition: .3s;
-}
-.brands a img:hover {
-    transform: translateY(-20px);
-    transition: .3s;
-}
-.brands-mobile {
-    display: none;
-    width: 100%;
-    justify-content: center;
-    padding: 0 0 47px;
 }
 
 /* Footer Contact */
@@ -719,12 +696,7 @@ img {
     transition: .9s;
 }
 
-.footer-contact-item-1 h2:hover {
-    color: red;
-    transition: 0.9;
-    font-size: 300%;
-    transition: 0.9s;
-}
+
 
 .footer-contact-item-2 {
     text-align: center;
@@ -764,10 +736,7 @@ img {
     transition: .6s;
 }
 
-.main-footer h4:hover {
-    color: red;
-    transition: 0.9s;
-}
+
 
 .main-footer h5 {
     margin-top: 40px;
@@ -835,6 +804,7 @@ img {
     align-items: center;
     width: 270px;
     height: 45px;
+    padding-right: 10%;
 }
 
 .col-footer-3 a img {
@@ -859,108 +829,12 @@ img {
 .footer-links a:not(:last-child) {
     padding-right: 65px;
 }
+
 .footer-links a img {
     transition: .3s;
 }
-.footer-links a img:hover {
-    transform: scale(1.3);
-    transition: 0.3s;
-}
-/* Hover */
-.contact-icon {
-    transition: 0.3s;
-}
 
-.contact-icon:hover {
-    padding: 5px;
-    transition: 0.3s;
-}
-
-.col-news {
-    transition: 0.6s;
-}
-
-.col-news:hover {
-    transform: scale(1.1);
-    transition: 0.6s;
-}
-
-.slick-dots li button:hover {
-    transform: scale(1.2);
-    transition: .3s;
-}
-
-.slick-prev,
-.slick-next,
-.slick-arrow {
-    display: none;
-}
-.text-see-all {
-    transition: 0.3s;
-}
-
-.text-see-all:hover {
-    color:#ffffff;
-}
-
-.fab {
-    transition: 0.6s;
-}
-
-.fab:hover {
-    font-size: 200%;
-    transition: 0.6s;
-}
-
-.btn-slip-down {
-    transition: 0.3s;
-}
-
-.btn-slip-down:hover {
-    transform: translateY(-5px);
-    transition: 0.3s;
-}
-
-.menu-banner li a {
-    padding-bottom: 1.5vw;
-    transition: 0.3s;
-}
-
-.menu-banner li a:hover {
-    padding: 2px 2px 1vw 2px;
-    color: #C1F8FF;
-    border-bottom: 2px #C1F8FF solid;
-    transition: 0.3s;
-}
-
-.service {
-    transition: .6s;
-}
-
-.service:hover {
-    background: #265BC5;
-    transition: .6s;
-}
-
-.col-footer-2 ul li a:hover {
-    color: lightblue;
-    transition: 0.6s;
-}
-.footer-contact-item-2 a img{
-    transition: .3s;
-}
-.footer-contact-item-2 img:hover {
-    transform: scale(1.3);
-    transition: .3s;
-}
-.icon-link {
-    transition: .3s;
-}
-.icon-link:hover {
-        transform: scale(1.3);
-        transition: .3s;
-}
-
+/* Back To Top */
 #toTopBtn {
     position: fixed;
     display: inline;
